# numbers-game

./: .gitignore  Cargo.toml  README.md  build.rs
assets/locales/: codes.xml  de.xml  en.xml  ua.xml
src/: consts.rs  game.rs  level.rs  localization.rs  main.rs  menu.rs  player.rs  timer.rs  utils.rs
